rs/sol-client-gen/tests/snapshots/generator__basic_works.snap
---
source: rs/sol-client-gen/tests/generator.rs
assertion_line: 7
expression: gen_client(idl)
---
// Code generated by sails-sol-client-gen. DO NOT EDIT.
#[cfg(feature = "with_mocks")]
#[cfg(not(target_arch = "wasm32"))]
extern crate std;
#[allow(unused_imports)]
#[macro_export]
macro_rules! io_struct_sol_impl {
    (
        $name:ident ( $( $param:ident : $ty:ty ),* ) -> $reply:ty,
        $entry_id:expr,
        $interface_id:expr,
        $selector_prefix:expr,
        $selector_name:expr
    ) => {
        pub struct $name(());

        impl $name {
            fn selector() -> [u8; 4] {
                let mut s = String::from($selector_prefix);
                s.push_str($selector_name);
                s.push_str(<<Self as ServiceCall>::Params::SolType as alloy_sol_types::SolType>::SOL_NAME);
                let selector = solidity::selector(s);
                selector.into()
            }

            pub fn encode_call(route_idx: u8, $( $param: $ty, )* ) -> Vec<u8> {
                <$name as ServiceCall>::encode_params_with_header(route_idx, &(false, $( $param, )* ))
            }

            pub fn decode_reply(route_idx: u8, payload: impl AsRef<[u8]>) -> Result<$reply, scale_codec::Error> {
                <$name as ServiceCall>::decode_reply_with_header(route_idx, payload)
            }
        }

        impl Identifiable for $name {
            const INTERFACE_ID: InterfaceId = $interface_id;
        }

        impl MethodMeta for $name {
            const ENTRY_ID: u16 = $entry_id;
        }

        impl ServiceCall for $name {
            type Params = (bool, $( $ty, )* );
            type Reply = $reply;

            fn encode_params_with_header(_route_idx: u8, value: &Self::Params) -> Vec<u8> {
                let mut payload = Self::selector().to_vec();
                payload.extend(alloy_sol_types::SolValue::abi_encode_sequence(value));
                payload
            }

            fn decode_reply_with_header(
                _route_idx: u8,
                payload: impl AsRef<[u8]>,
            ) -> Result<Self::Reply, parity_scale_codec::Error> {
                alloy_sol_types::SolValue::abi_decode(payload.as_ref(), true)
                    .map_err(|_| parity_scale_codec::Error::from("Failed to decode ABI reply"))
            }
        }
    };
}

#[allow(unused_imports)]
use sails_rs::alloy_sol_types;
#[allow(unused_imports)]
use sails_rs::alloy_sol_types::SolValue;
#[allow(unused_imports)]
use sails_rs::solidity;
use sails_rs::{client::*, collections::*, prelude::*};

pub mod basic {
    use super::*;

    #[derive(PartialEq, Clone, Debug, Encode, Decode, TypeInfo, ReflectHash)]
    #[codec(crate = sails_rs::scale_codec)]
    #[scale_info(crate = sails_rs::scale_info)]
    #[reflect_hash(crate = sails_rs)]
    pub struct MyParam {
        pub f1: u32,
        pub f2: Vec<String>,
        pub f3: Option<(u8, u32)>,
    }
    #[derive(PartialEq, Clone, Debug, Encode, Decode, TypeInfo, ReflectHash)]
    #[codec(crate = sails_rs::scale_codec)]
    #[scale_info(crate = sails_rs::scale_info)]
    #[reflect_hash(crate = sails_rs)]
    pub enum MyParam2 {
        Variant1,
        Variant2(u32),
        Variant3(u32),
        Variant4(u8, u32),
        Variant5 { f1: String, f2: Vec<u8> },
    }

    pub trait Basic {
        type Env: sails_rs::client::GearEnv;
        fn do_that(
            &mut self,
            p1: (u8, u32),
        ) -> sails_rs::client::PendingCall<io::DoThat, Self::Env>;
        fn do_this(
            &mut self,
            p1: u32,
            p2: MyParam,
        ) -> sails_rs::client::PendingCall<io::DoThis, Self::Env>;
    }

    pub struct BasicImpl;

    impl sails_rs::client::Identifiable for BasicImpl {
        const INTERFACE_ID: sails_rs::InterfaceId =
            sails_rs::InterfaceId::from_bytes_8([82, 241, 49, 169, 231, 31, 0, 230]);
    }

    impl<E: sails_rs::client::GearEnv> Basic for sails_rs::client::Service<BasicImpl, E> {
        type Env = E;
        fn do_that(
            &mut self,
            p1: (u8, u32),
        ) -> sails_rs::client::PendingCall<io::DoThat, Self::Env> {
            self.pending_call((p1,))
        }
        fn do_this(
            &mut self,
            p1: u32,
            p2: MyParam,
        ) -> sails_rs::client::PendingCall<io::DoThis, Self::Env> {
            self.pending_call((p1, p2))
        }
    }

    pub mod io {
        use super::*;
        io_struct_sol_impl!(
            DoThat (p1: (u8, u32, )) -> u8,
            0,
            <super::BasicImpl as sails_rs::client::Identifiable>::INTERFACE_ID,
            "basic",
            "DoThat"
        );
        io_struct_sol_impl!(
            DoThis (p1: u32, p2: super::MyParam) -> u16,
            1,
            <super::BasicImpl as sails_rs::client::Identifiable>::INTERFACE_ID,
            "basic",
            "DoThis"
        );
    }

    #[cfg(feature = "with_mocks")]
    #[cfg(not(target_arch = "wasm32"))]
    pub mod mockall {
        use super::*;
        use sails_rs::mockall::*;
        mock! {
            pub Basic {}

            #[allow(refining_impl_trait)]
            #[allow(clippy::type_complexity)]
            impl basic::Basic for Basic {
                type Env = sails_rs::client::GstdEnv;
                fn do_that (&mut self, p1: (u8, u32, )) -> sails_rs::client::PendingCall<basic::io::DoThat, sails_rs::client::GstdEnv>;fn do_this (&mut self, p1: u32, p2: MyParam) -> sails_rs::client::PendingCall<basic::io::DoThis, sails_rs::client::GstdEnv>;
            }
        }
    }
}
