rs/sol-client-gen/tests/snapshots/generator__complex_type_generation_works.snap
---
source: rs/sol-client-gen/tests/generator.rs
assertion_line: 14
expression: gen_client(IDL)
---
// Code generated by sails-sol-client-gen. DO NOT EDIT.
#[cfg(feature = "with_mocks")]
#[cfg(not(target_arch = "wasm32"))]
extern crate std;
#[allow(unused_imports)]
#[macro_export]
macro_rules! io_struct_sol_impl {
    (
        $name:ident ( $( $param:ident : $ty:ty ),* ) -> $reply:ty,
        $entry_id:expr,
        $interface_id:expr,
        $selector_prefix:expr,
        $selector_name:expr
    ) => {
        pub struct $name(());

        impl $name {
            fn selector() -> [u8; 4] {
                let mut s = String::from($selector_prefix);
                s.push_str($selector_name);
                s.push_str(<<Self as ServiceCall>::Params::SolType as alloy_sol_types::SolType>::SOL_NAME);
                let selector = solidity::selector(s);
                selector.into()
            }

            pub fn encode_call(route_idx: u8, $( $param: $ty, )* ) -> Vec<u8> {
                <$name as ServiceCall>::encode_params_with_header(route_idx, &(false, $( $param, )* ))
            }

            pub fn decode_reply(route_idx: u8, payload: impl AsRef<[u8]>) -> Result<$reply, scale_codec::Error> {
                <$name as ServiceCall>::decode_reply_with_header(route_idx, payload)
            }
        }

        impl Identifiable for $name {
            const INTERFACE_ID: InterfaceId = $interface_id;
        }

        impl MethodMeta for $name {
            const ENTRY_ID: u16 = $entry_id;
        }

        impl ServiceCall for $name {
            type Params = (bool, $( $ty, )* );
            type Reply = $reply;

            fn encode_params_with_header(_route_idx: u8, value: &Self::Params) -> Vec<u8> {
                let mut payload = Self::selector().to_vec();
                payload.extend(alloy_sol_types::SolValue::abi_encode_sequence(value));
                payload
            }

            fn decode_reply_with_header(
                _route_idx: u8,
                payload: impl AsRef<[u8]>,
            ) -> Result<Self::Reply, parity_scale_codec::Error> {
                alloy_sol_types::SolValue::abi_decode(payload.as_ref(), true)
                    .map_err(|_| parity_scale_codec::Error::from("Failed to decode ABI reply"))
            }
        }
    };
}

#[allow(unused_imports)]
use sails_rs::alloy_sol_types;
#[allow(unused_imports)]
use sails_rs::alloy_sol_types::SolValue;
#[allow(unused_imports)]
use sails_rs::solidity;
use sails_rs::{client::*, collections::*, prelude::*};
pub struct ComplexTypesProgramProgram;

impl ComplexTypesProgramProgram {
    pub const ROUTE_ID_MY_COMPLEX_SERVICE: u8 = 1;
    pub const ROUTE_ID_ANOTHER_SERVICE: u8 = 2;
}

impl sails_rs::client::Program for ComplexTypesProgramProgram {}

pub trait ComplexTypesProgram {
    type Env: sails_rs::client::GearEnv;
    fn my_complex_service(
        &self,
    ) -> sails_rs::client::Service<my_complex_service::MyComplexServiceImpl, Self::Env>;
    fn another_service(
        &self,
    ) -> sails_rs::client::Service<another_service::AnotherServiceImpl, Self::Env>;
}

impl<E: sails_rs::client::GearEnv> ComplexTypesProgram
    for sails_rs::client::Actor<ComplexTypesProgramProgram, E>
{
    type Env = E;
    fn my_complex_service(
        &self,
    ) -> sails_rs::client::Service<my_complex_service::MyComplexServiceImpl, Self::Env> {
        self.service(ComplexTypesProgramProgram::ROUTE_ID_MY_COMPLEX_SERVICE)
    }
    fn another_service(
        &self,
    ) -> sails_rs::client::Service<another_service::AnotherServiceImpl, Self::Env> {
        self.service(ComplexTypesProgramProgram::ROUTE_ID_ANOTHER_SERVICE)
    }
}
pub trait ComplexTypesProgramCtors {
    type Env: sails_rs::client::GearEnv;
    fn new_program(
        self,
        initial_count: u32,
        id_prefix: String,
    ) -> sails_rs::client::PendingCtor<ComplexTypesProgramProgram, io::NewProgram, Self::Env>;
}

impl<E: sails_rs::client::GearEnv> ComplexTypesProgramCtors
    for sails_rs::client::Deployment<ComplexTypesProgramProgram, E>
{
    type Env = E;
    fn new_program(
        self,
        initial_count: u32,
        id_prefix: String,
    ) -> sails_rs::client::PendingCtor<ComplexTypesProgramProgram, io::NewProgram, Self::Env> {
        self.pending_ctor((initial_count, id_prefix))
    }
}

pub mod io {
    use super::*;
    io_struct_sol_impl!(NewProgram (initial_count: u32, id_prefix: String) -> (), 0, sails_rs::meta::InterfaceId::zero(), "", "newProgram");
}

pub mod my_complex_service {
    use super::*;

    #[derive(PartialEq, Clone, Debug, Encode, Decode, TypeInfo, ReflectHash)]
    #[codec(crate = sails_rs::scale_codec)]
    #[scale_info(crate = sails_rs::scale_info)]
    #[reflect_hash(crate = sails_rs)]
    pub struct ServiceLocalConfig {
        pub enabled: bool,
        pub retry_count: NonZeroU8,
        pub actor_list: Vec<ActorId>,
    }
    #[derive(PartialEq, Clone, Debug, Encode, Decode, TypeInfo, ReflectHash)]
    #[codec(crate = sails_rs::scale_codec)]
    #[scale_info(crate = sails_rs::scale_info)]
    #[reflect_hash(crate = sails_rs)]
    pub enum ServiceStatus {
        Active(ServiceLocalConfig),
        Paused,
        Error(ErrorType),
    }
    #[derive(PartialEq, Clone, Debug, Encode, Decode, TypeInfo, ReflectHash)]
    #[codec(crate = sails_rs::scale_codec)]
    #[scale_info(crate = sails_rs::scale_info)]
    #[reflect_hash(crate = sails_rs)]
    pub struct ProgramGlobalInfo {
        pub id: ActorId,
        pub config_version: u32,
        pub map_of_data: Vec<(String, ProgramScopedData)>,
        pub optional_value: Option<u64>,
        pub result_status: Result<(u32, bool), ErrorType>,
        pub values_vec: Vec<u8>,
        pub non_zero_id: NonZeroU16,
        pub h256_hash: H256,
    }
    #[derive(PartialEq, Clone, Debug, Encode, Decode, TypeInfo, ReflectHash)]
    #[codec(crate = sails_rs::scale_codec)]
    #[scale_info(crate = sails_rs::scale_info)]
    #[reflect_hash(crate = sails_rs)]
    pub struct ProgramScopedData {
        pub name: String,
        pub value: U256,
        pub sub_id: u32,
    }
    #[derive(PartialEq, Clone, Debug, Encode, Decode, TypeInfo, ReflectHash)]
    #[codec(crate = sails_rs::scale_codec)]
    #[scale_info(crate = sails_rs::scale_info)]
    #[reflect_hash(crate = sails_rs)]
    pub enum ErrorType {
        InvalidInput,
        NotFound(String),
        AccessDenied { id: ActorId, reason: String },
    }
    #[derive(PartialEq, Clone, Debug, Encode, Decode, TypeInfo, ReflectHash)]
    #[codec(crate = sails_rs::scale_codec)]
    #[scale_info(crate = sails_rs::scale_info)]
    #[reflect_hash(crate = sails_rs)]
    pub struct GenericData<T, U> {
        pub value_t: T,
        pub value_u: U,
        pub description: String,
    }
    #[derive(PartialEq, Clone, Debug, Encode, Decode, TypeInfo, ReflectHash)]
    #[codec(crate = sails_rs::scale_codec)]
    #[scale_info(crate = sails_rs::scale_info)]
    #[reflect_hash(crate = sails_rs)]
    pub enum GenericResult<V> {
        Success(V),
        Failure(ErrorType),
    }
    #[derive(PartialEq, Clone, Debug, Encode, Decode, TypeInfo, ReflectHash)]
    #[codec(crate = sails_rs::scale_codec)]
    #[scale_info(crate = sails_rs::scale_info)]
    #[reflect_hash(crate = sails_rs)]
    pub struct NonZeroU8(pub u8);
    #[derive(PartialEq, Clone, Debug, Encode, Decode, TypeInfo, ReflectHash)]
    #[codec(crate = sails_rs::scale_codec)]
    #[scale_info(crate = sails_rs::scale_info)]
    #[reflect_hash(crate = sails_rs)]
    pub struct NonZeroU16(pub u16);
    #[derive(PartialEq, Clone, Debug, Encode, Decode, TypeInfo, ReflectHash)]
    #[codec(crate = sails_rs::scale_codec)]
    #[scale_info(crate = sails_rs::scale_info)]
    #[reflect_hash(crate = sails_rs)]
    pub struct NonZeroU32(pub u32);

    pub trait MyComplexService {
        type Env: sails_rs::client::GearEnv;
        fn get_actor_ids(
            &self,
            count: u32,
        ) -> sails_rs::client::PendingCall<io::GetActorIds, Self::Env>;
        fn get_data(
            &mut self,
            key: String,
        ) -> sails_rs::client::PendingCall<io::GetData, Self::Env>;
        fn get_info(&self) -> sails_rs::client::PendingCall<io::GetInfo, Self::Env>;
        fn initialize(
            &mut self,
            start_data: ProgramGlobalInfo,
            max_size: NonZeroU32,
        ) -> sails_rs::client::PendingCall<io::Initialize, Self::Env>;
        fn process_generic_data(
            &mut self,
            input_data: GenericData<u32, String>,
            list_of_generics: Vec<GenericData<ActorId, U256>>,
            optional_generic_result: Option<GenericResult<bool>>,
        ) -> sails_rs::client::PendingCall<io::ProcessGenericData, Self::Env>;
        fn update_status(
            &mut self,
            id: u64,
            new_status: ServiceStatus,
            metadata: Option<String>,
        ) -> sails_rs::client::PendingCall<io::UpdateStatus, Self::Env>;
    }

    pub struct MyComplexServiceImpl;

    impl sails_rs::client::Identifiable for MyComplexServiceImpl {
        const INTERFACE_ID: sails_rs::InterfaceId =
            sails_rs::InterfaceId::from_bytes_8([18, 83, 117, 202, 195, 37, 47, 107]);
    }

    impl<E: sails_rs::client::GearEnv> MyComplexService
        for sails_rs::client::Service<MyComplexServiceImpl, E>
    {
        type Env = E;
        fn get_actor_ids(
            &self,
            count: u32,
        ) -> sails_rs::client::PendingCall<io::GetActorIds, Self::Env> {
            self.pending_call((count,))
        }
        fn get_data(
            &mut self,
            key: String,
        ) -> sails_rs::client::PendingCall<io::GetData, Self::Env> {
            self.pending_call((key,))
        }
        fn get_info(&self) -> sails_rs::client::PendingCall<io::GetInfo, Self::Env> {
            self.pending_call(())
        }
        fn initialize(
            &mut self,
            start_data: ProgramGlobalInfo,
            max_size: NonZeroU32,
        ) -> sails_rs::client::PendingCall<io::Initialize, Self::Env> {
            self.pending_call((start_data, max_size))
        }
        fn process_generic_data(
            &mut self,
            input_data: GenericData<u32, String>,
            list_of_generics: Vec<GenericData<ActorId, U256>>,
            optional_generic_result: Option<GenericResult<bool>>,
        ) -> sails_rs::client::PendingCall<io::ProcessGenericData, Self::Env> {
            self.pending_call((input_data, list_of_generics, optional_generic_result))
        }
        fn update_status(
            &mut self,
            id: u64,
            new_status: ServiceStatus,
            metadata: Option<String>,
        ) -> sails_rs::client::PendingCall<io::UpdateStatus, Self::Env> {
            self.pending_call((id, new_status, metadata))
        }
    }

    pub mod io {
        use super::*;
        io_struct_sol_impl!(
            GetActorIds (count: u32) -> Vec<ActorId>,
            0,
            <super::MyComplexServiceImpl as sails_rs::client::Identifiable>::INTERFACE_ID,
            "myComplexService",
            "GetActorIds"
        );
        io_struct_sol_impl!(
            GetData (key: String) -> super::Result<super::ProgramScopedData, super::ErrorType, >,
            1,
            <super::MyComplexServiceImpl as sails_rs::client::Identifiable>::INTERFACE_ID,
            "myComplexService",
            "GetData"
        );
        io_struct_sol_impl!(
            GetInfo () -> super::ProgramGlobalInfo,
            2,
            <super::MyComplexServiceImpl as sails_rs::client::Identifiable>::INTERFACE_ID,
            "myComplexService",
            "GetInfo"
        );
        io_struct_sol_impl!(
            Initialize (start_data: super::ProgramGlobalInfo, max_size: super::NonZeroU32) -> super::Result<(), super::ErrorType, >,
            3,
            <super::MyComplexServiceImpl as sails_rs::client::Identifiable>::INTERFACE_ID,
            "myComplexService",
            "Initialize"
        );
        io_struct_sol_impl!(
            ProcessGenericData (input_data: super::GenericData<u32, String, >, list_of_generics: Vec<super::GenericData<ActorId, U256, >>, optional_generic_result: super::Option<super::GenericResult<bool, >, >) -> super::GenericData<bool, u8, >,
            4,
            <super::MyComplexServiceImpl as sails_rs::client::Identifiable>::INTERFACE_ID,
            "myComplexService",
            "ProcessGenericData"
        );
        io_struct_sol_impl!(
            UpdateStatus (id: u64, new_status: super::ServiceStatus, metadata: super::Option<String, >) -> super::GenericResult<u32, >,
            5,
            <super::MyComplexServiceImpl as sails_rs::client::Identifiable>::INTERFACE_ID,
            "myComplexService",
            "UpdateStatus"
        );
    }

    #[cfg(feature = "with_mocks")]
    #[cfg(not(target_arch = "wasm32"))]
    pub mod mockall {
        use super::*;
        use sails_rs::mockall::*;
        mock! {
            pub MyComplexService {}

            #[allow(refining_impl_trait)]
            #[allow(clippy::type_complexity)]
            impl my_complex_service::MyComplexService for MyComplexService {
                type Env = sails_rs::client::GstdEnv;
                fn get_actor_ids (&self, count: u32) -> sails_rs::client::PendingCall<my_complex_service::io::GetActorIds, sails_rs::client::GstdEnv>;fn get_data (&mut self, key: String) -> sails_rs::client::PendingCall<my_complex_service::io::GetData, sails_rs::client::GstdEnv>;fn get_info (&self, ) -> sails_rs::client::PendingCall<my_complex_service::io::GetInfo, sails_rs::client::GstdEnv>;fn initialize (&mut self, start_data: ProgramGlobalInfo, max_size: NonZeroU32) -> sails_rs::client::PendingCall<my_complex_service::io::Initialize, sails_rs::client::GstdEnv>;fn process_generic_data (&mut self, input_data: GenericData<u32, String, >, list_of_generics: Vec<GenericData<ActorId, U256, >>, optional_generic_result: Option<GenericResult<bool, >, >) -> sails_rs::client::PendingCall<my_complex_service::io::ProcessGenericData, sails_rs::client::GstdEnv>;fn update_status (&mut self, id: u64, new_status: ServiceStatus, metadata: Option<String, >) -> sails_rs::client::PendingCall<my_complex_service::io::UpdateStatus, sails_rs::client::GstdEnv>;
            }
        }
    }
}

pub mod another_service {
    use super::*;

    #[derive(PartialEq, Clone, Debug, Encode, Decode, TypeInfo, ReflectHash)]
    #[codec(crate = sails_rs::scale_codec)]
    #[scale_info(crate = sails_rs::scale_info)]
    #[reflect_hash(crate = sails_rs)]
    pub enum ErrorType {
        InvalidInput,
        NotFound(String),
        AccessDenied { id: ActorId, reason: String },
    }

    pub trait AnotherService {
        type Env: sails_rs::client::GearEnv;
        fn ping(&mut self) -> sails_rs::client::PendingCall<io::Ping, Self::Env>;
        fn process_values(
            &mut self,
            data: Vec<U256>,
        ) -> sails_rs::client::PendingCall<io::ProcessValues, Self::Env>;
    }

    pub struct AnotherServiceImpl;

    impl sails_rs::client::Identifiable for AnotherServiceImpl {
        const INTERFACE_ID: sails_rs::InterfaceId =
            sails_rs::InterfaceId::from_bytes_8([155, 46, 27, 116, 89, 52, 232, 187]);
    }

    impl<E: sails_rs::client::GearEnv> AnotherService
        for sails_rs::client::Service<AnotherServiceImpl, E>
    {
        type Env = E;
        fn ping(&mut self) -> sails_rs::client::PendingCall<io::Ping, Self::Env> {
            self.pending_call(())
        }
        fn process_values(
            &mut self,
            data: Vec<U256>,
        ) -> sails_rs::client::PendingCall<io::ProcessValues, Self::Env> {
            self.pending_call((data,))
        }
    }

    pub mod io {
        use super::*;
        io_struct_sol_impl!(
            Ping () -> String,
            0,
            <super::AnotherServiceImpl as sails_rs::client::Identifiable>::INTERFACE_ID,
            "anotherService",
            "Ping"
        );
        io_struct_sol_impl!(
            ProcessValues (data: Vec<U256>) -> super::Result<(), super::ErrorType, >,
            1,
            <super::AnotherServiceImpl as sails_rs::client::Identifiable>::INTERFACE_ID,
            "anotherService",
            "ProcessValues"
        );
    }

    #[cfg(feature = "with_mocks")]
    #[cfg(not(target_arch = "wasm32"))]
    pub mod mockall {
        use super::*;
        use sails_rs::mockall::*;
        mock! {
            pub AnotherService {}

            #[allow(refining_impl_trait)]
            #[allow(clippy::type_complexity)]
            impl another_service::AnotherService for AnotherService {
                type Env = sails_rs::client::GstdEnv;
                fn ping (&mut self, ) -> sails_rs::client::PendingCall<another_service::io::Ping, sails_rs::client::GstdEnv>;fn process_values (&mut self, data: Vec<U256>) -> sails_rs::client::PendingCall<another_service::io::ProcessValues, sails_rs::client::GstdEnv>;
            }
        }
    }
}
