rs/sol-client-gen/tests/snapshots/generator__events_works.snap
---
source: rs/sol-client-gen/tests/generator.rs
assertion_line: 42
expression: gen_client(idl)
---
// Code generated by sails-sol-client-gen. DO NOT EDIT.
#[cfg(feature = "with_mocks")]
#[cfg(not(target_arch = "wasm32"))]
extern crate std;
#[allow(unused_imports)]
#[macro_export]
macro_rules! io_struct_sol_impl {
    (
        $name:ident ( $( $param:ident : $ty:ty ),* ) -> $reply:ty,
        $entry_id:expr,
        $interface_id:expr,
        $selector_prefix:expr,
        $selector_name:expr
    ) => {
        pub struct $name(());

        impl $name {
            fn selector() -> [u8; 4] {
                let mut s = String::from($selector_prefix);
                s.push_str($selector_name);
                s.push_str(<<Self as ServiceCall>::Params::SolType as alloy_sol_types::SolType>::SOL_NAME);
                let selector = solidity::selector(s);
                selector.into()
            }

            pub fn encode_call(route_idx: u8, $( $param: $ty, )* ) -> Vec<u8> {
                <$name as ServiceCall>::encode_params_with_header(route_idx, &(false, $( $param, )* ))
            }

            pub fn decode_reply(route_idx: u8, payload: impl AsRef<[u8]>) -> Result<$reply, scale_codec::Error> {
                <$name as ServiceCall>::decode_reply_with_header(route_idx, payload)
            }
        }

        impl Identifiable for $name {
            const INTERFACE_ID: InterfaceId = $interface_id;
        }

        impl MethodMeta for $name {
            const ENTRY_ID: u16 = $entry_id;
        }

        impl ServiceCall for $name {
            type Params = (bool, $( $ty, )* );
            type Reply = $reply;

            fn encode_params_with_header(_route_idx: u8, value: &Self::Params) -> Vec<u8> {
                let mut payload = Self::selector().to_vec();
                payload.extend(alloy_sol_types::SolValue::abi_encode_sequence(value));
                payload
            }

            fn decode_reply_with_header(
                _route_idx: u8,
                payload: impl AsRef<[u8]>,
            ) -> Result<Self::Reply, parity_scale_codec::Error> {
                alloy_sol_types::SolValue::abi_decode(payload.as_ref(), true)
                    .map_err(|_| parity_scale_codec::Error::from("Failed to decode ABI reply"))
            }
        }
    };
}

#[allow(unused_imports)]
use sails_rs::alloy_sol_types;
#[allow(unused_imports)]
use sails_rs::alloy_sol_types::SolValue;
#[allow(unused_imports)]
use sails_rs::solidity;
use sails_rs::{client::*, collections::*, prelude::*};

pub mod service_with_events {
    use super::*;

    #[derive(PartialEq, Clone, Debug, Encode, Decode, TypeInfo, ReflectHash)]
    #[codec(crate = sails_rs::scale_codec)]
    #[scale_info(crate = sails_rs::scale_info)]
    #[reflect_hash(crate = sails_rs)]
    pub struct MyParam {
        pub f1: U256,
        pub f2: Vec<u8>,
        pub f3: Option<(u64, U256)>,
    }

    pub trait ServiceWithEvents {
        type Env: sails_rs::client::GearEnv;
        fn do_this(
            &mut self,
            p1: U256,
            p2: MyParam,
        ) -> sails_rs::client::PendingCall<io::DoThis, Self::Env>;
    }

    pub struct ServiceWithEventsImpl;

    impl sails_rs::client::Identifiable for ServiceWithEventsImpl {
        const INTERFACE_ID: sails_rs::InterfaceId =
            sails_rs::InterfaceId::from_bytes_8([186, 231, 26, 185, 242, 135, 49, 106]);
    }

    impl<E: sails_rs::client::GearEnv> ServiceWithEvents
        for sails_rs::client::Service<ServiceWithEventsImpl, E>
    {
        type Env = E;
        fn do_this(
            &mut self,
            p1: U256,
            p2: MyParam,
        ) -> sails_rs::client::PendingCall<io::DoThis, Self::Env> {
            self.pending_call((p1, p2))
        }
    }

    pub mod io {
        use super::*;
        io_struct_sol_impl!(
            DoThis (p1: U256, p2: super::MyParam) -> u64,
            0,
            <super::ServiceWithEventsImpl as sails_rs::client::Identifiable>::INTERFACE_ID,
            "serviceWithEvents",
            "DoThis"
        );
    }

    #[cfg(not(target_arch = "wasm32"))]
    pub mod events {
        use super::*;
        #[derive(PartialEq, Debug, Encode, Decode, ReflectHash)]
        #[codec(crate = sails_rs::scale_codec)]
        #[reflect_hash(crate = sails_rs)]
        pub enum ServiceWithEventsEvents {
            #[codec(index = 0)]
            One(u64),
            #[codec(index = 1)]
            Reset,
            #[codec(index = 2)]
            Three(MyParam),
            #[codec(index = 3)]
            Two { id: u8, reference: u64 },
        }

        impl ServiceWithEventsEvents {
            pub fn entry_id(&self) -> u16 {
                match self {
                    Self::One { .. } => 0,
                    Self::Reset { .. } => 1,
                    Self::Three { .. } => 2,
                    Self::Two { .. } => 3,
                }
            }
        }

        impl sails_rs::client::Event for ServiceWithEventsEvents {}

        impl sails_rs::client::Identifiable for ServiceWithEventsEvents {
            const INTERFACE_ID: sails_rs::InterfaceId =
                <ServiceWithEventsImpl as sails_rs::client::Identifiable>::INTERFACE_ID;
        }

        impl sails_rs::client::ServiceWithEvents for ServiceWithEventsImpl {
            type Event = ServiceWithEventsEvents;
        }
    }

    #[cfg(feature = "with_mocks")]
    #[cfg(not(target_arch = "wasm32"))]
    pub mod mockall {
        use super::*;
        use sails_rs::mockall::*;
        mock! {
            pub ServiceWithEvents {}

            #[allow(refining_impl_trait)]
            #[allow(clippy::type_complexity)]
            impl service_with_events::ServiceWithEvents for ServiceWithEvents {
                type Env = sails_rs::client::GstdEnv;
                fn do_this (&mut self, p1: U256, p2: MyParam) -> sails_rs::client::PendingCall<service_with_events::io::DoThis, sails_rs::client::GstdEnv>;
            }
        }
    }
}
