rs/sol-client-gen/tests/snapshots/generator__external_types.snap
---
source: rs/sol-client-gen/tests/generator.rs
assertion_line: 66
expression: code
---
// Code generated by sails-sol-client-gen. DO NOT EDIT.
#[allow(unused_imports)]
#[macro_export]
macro_rules! io_struct_sol_impl {
    (
        $name:ident ( $( $param:ident : $ty:ty ),* ) -> $reply:ty,
        $entry_id:expr,
        $interface_id:expr,
        $selector_prefix:expr,
        $selector_name:expr
    ) => {
        pub struct $name(());

        impl $name {
            fn selector() -> [u8; 4] {
                let mut s = String::from($selector_prefix);
                s.push_str($selector_name);
                s.push_str(<<Self as ServiceCall>::Params::SolType as alloy_sol_types::SolType>::SOL_NAME);
                let selector = solidity::selector(s);
                selector.into()
            }

            pub fn encode_call(route_idx: u8, $( $param: $ty, )* ) -> Vec<u8> {
                <$name as ServiceCall>::encode_params_with_header(route_idx, &(false, $( $param, )* ))
            }

            pub fn decode_reply(route_idx: u8, payload: impl AsRef<[u8]>) -> Result<$reply, scale_codec::Error> {
                <$name as ServiceCall>::decode_reply_with_header(route_idx, payload)
            }
        }

        impl Identifiable for $name {
            const INTERFACE_ID: InterfaceId = $interface_id;
        }

        impl MethodMeta for $name {
            const ENTRY_ID: u16 = $entry_id;
        }

        impl ServiceCall for $name {
            type Params = (bool, $( $ty, )* );
            type Reply = $reply;

            fn encode_params_with_header(_route_idx: u8, value: &Self::Params) -> Vec<u8> {
                let mut payload = Self::selector().to_vec();
                payload.extend(alloy_sol_types::SolValue::abi_encode_sequence(value));
                payload
            }

            fn decode_reply_with_header(
                _route_idx: u8,
                payload: impl AsRef<[u8]>,
            ) -> Result<Self::Reply, parity_scale_codec::Error> {
                alloy_sol_types::SolValue::abi_decode(payload.as_ref(), true)
                    .map_err(|_| parity_scale_codec::Error::from("Failed to decode ABI reply"))
            }
        }
    };
}

#[allow(unused_imports)]
use my_crate::MyParam;
#[allow(unused_imports)]
use my_crate::sails::alloy_sol_types;
#[allow(unused_imports)]
use my_crate::sails::alloy_sol_types::SolValue;
#[allow(unused_imports)]
use my_crate::sails::solidity;
use my_crate::sails::{client::*, collections::*, prelude::*};

pub mod service {
    use super::*;

    #[derive(Encode, Decode, TypeInfo, ReflectHash)]
    #[codec(crate = my_crate::sails::scale_codec)]
    #[scale_info(crate = my_crate::sails::scale_info)]
    #[reflect_hash(crate = my_crate::sails)]
    pub enum MyParam2 {
        Variant1,
        Variant2(u32),
        Variant3(u32),
        Variant4(u8, u32),
        Variant5 { f1: String, f2: Vec<u8> },
    }

    pub trait Service {
        type Env: my_crate::sails::client::GearEnv;
        fn do_that(
            &mut self,
            p1: (u8, u32),
        ) -> my_crate::sails::client::PendingCall<io::DoThat, Self::Env>;
        fn do_this(
            &mut self,
            p1: u32,
            p2: MyParam,
        ) -> my_crate::sails::client::PendingCall<io::DoThis, Self::Env>;
    }

    pub struct ServiceImpl;

    impl my_crate::sails::client::Identifiable for ServiceImpl {
        const INTERFACE_ID: my_crate::sails::InterfaceId =
            my_crate::sails::InterfaceId::from_bytes_8([82, 241, 49, 169, 231, 31, 0, 230]);
    }

    impl<E: my_crate::sails::client::GearEnv> Service
        for my_crate::sails::client::Service<ServiceImpl, E>
    {
        type Env = E;
        fn do_that(
            &mut self,
            p1: (u8, u32),
        ) -> my_crate::sails::client::PendingCall<io::DoThat, Self::Env> {
            self.pending_call((p1,))
        }
        fn do_this(
            &mut self,
            p1: u32,
            p2: MyParam,
        ) -> my_crate::sails::client::PendingCall<io::DoThis, Self::Env> {
            self.pending_call((p1, p2))
        }
    }

    pub mod io {
        use super::*;
        io_struct_sol_impl!(
            DoThat (p1: (u8, u32, )) -> u8,
            0,
            <super::ServiceImpl as my_crate::sails::client::Identifiable>::INTERFACE_ID,
            "service",
            "DoThat"
        );
        io_struct_sol_impl!(
            DoThis (p1: u32, p2: super::MyParam) -> u16,
            1,
            <super::ServiceImpl as my_crate::sails::client::Identifiable>::INTERFACE_ID,
            "service",
            "DoThis"
        );
    }
}
