rs/sol-client-gen/tests/snapshots/generator__generates_client_from_single_interface.snap
---
source: rs/sol-client-gen/tests/generator.rs
expression: "ClientGenerator::from_sol(SOL).with_contract_name(\"IERC20\").generate().expect(\"generate Solidity client\")"
---
// Code generated by sails-sol-client-gen. DO NOT EDIT.
use sails_rs::{
    ActorId,
    client::{GearEnv, Identifiable, MethodMeta, PendingCall, PendingCtor, ServiceCall},
    solidity,
};

#[derive(Debug, Clone)]
pub struct Ierc20Client<E: GearEnv> {
    env: E,
    program_id: ActorId,
}

impl<E: GearEnv> Ierc20Client<E> {
    pub fn new(env: E, program_id: ActorId) -> Self {
        Self { env, program_id }
    }

    pub fn with_program_id(mut self, program_id: ActorId) -> Self {
        self.program_id = program_id;
        self
    }

    pub fn program_id(&self) -> ActorId {
        self.program_id
    }

    pub fn env(&self) -> &E {
        &self.env
    }
}
pub struct Transfer;

impl Identifiable for Transfer {
    const INTERFACE_ID: sails_rs::InterfaceId = sails_rs::InterfaceId::zero();
}

impl MethodMeta for Transfer {
    const ENTRY_ID: u16 = 0;
}

impl ServiceCall for Transfer {
    type Params = sails_rs::prelude::Vec<u8>;
    type Reply = sails_rs::prelude::Vec<u8>;

    fn encode_params_with_header(
        _route_idx: u8,
        value: &Self::Params,
    ) -> sails_rs::prelude::Vec<u8> {
        let selector = solidity::selector("transfer(address,uint256)");
        [selector.as_slice(), value.as_slice()].concat()
    }

    fn decode_reply_with_header(
        _route_idx: u8,
        payload: impl AsRef<[u8]>,
    ) -> Result<Self::Reply, sails_rs::scale_codec::Error> {
        Ok(payload.as_ref().to_vec())
    }
}

impl<E: GearEnv> Ierc20Client<E> {
    pub const TRANSFER_SIGNATURE: &'static str = "transfer(address,uint256)";

    pub fn transfer(&self, encoded_args: impl AsRef<[u8]>) -> PendingCall<Transfer, E> {
        PendingCall::<Transfer, E>::new(
            self.env.clone(),
            self.program_id,
            0,
            encoded_args.as_ref().to_vec(),
        )
    }
}
pub struct BalanceOf;

impl Identifiable for BalanceOf {
    const INTERFACE_ID: sails_rs::InterfaceId = sails_rs::InterfaceId::zero();
}

impl MethodMeta for BalanceOf {
    const ENTRY_ID: u16 = 1;
}

impl ServiceCall for BalanceOf {
    type Params = sails_rs::prelude::Vec<u8>;
    type Reply = sails_rs::prelude::Vec<u8>;

    fn encode_params_with_header(
        _route_idx: u8,
        value: &Self::Params,
    ) -> sails_rs::prelude::Vec<u8> {
        let selector = solidity::selector("balanceOf(address)");
        [selector.as_slice(), value.as_slice()].concat()
    }

    fn decode_reply_with_header(
        _route_idx: u8,
        payload: impl AsRef<[u8]>,
    ) -> Result<Self::Reply, sails_rs::scale_codec::Error> {
        Ok(payload.as_ref().to_vec())
    }
}

impl<E: GearEnv> Ierc20Client<E> {
    pub const BALANCE_OF_SIGNATURE: &'static str = "balanceOf(address)";

    pub fn balance_of(&self, encoded_args: impl AsRef<[u8]>) -> PendingCall<BalanceOf, E> {
        PendingCall::<BalanceOf, E>::new(
            self.env.clone(),
            self.program_id,
            0,
            encoded_args.as_ref().to_vec(),
        )
    }
}
