rs/sol-client-gen/tests/snapshots/generator__generates_client_from_snapshot_interface_contract.snap
---
source: rs/sol-client-gen/tests/generator.rs
expression: "ClientGenerator::from_sol(&sol).with_contract_name(\"ITestContract\").generate().expect(\"generate client for interface from snapshot\")"
---
// Code generated by sails-sol-client-gen. DO NOT EDIT.
use sails_rs::{
    ActorId,
    client::{GearEnv, PendingCall, PendingCtor},
};

#[derive(Debug, Clone)]
pub struct ITestContractClient<E: GearEnv> {
    env: E,
    program_id: ActorId,
}

impl<E: GearEnv> ITestContractClient<E> {
    pub fn new(env: E, program_id: ActorId) -> Self {
        Self { env, program_id }
    }

    pub fn with_program_id(mut self, program_id: ActorId) -> Self {
        self.program_id = program_id;
        self
    }

    pub fn program_id(&self) -> ActorId {
        self.program_id
    }

    pub fn env(&self) -> &E {
        &self.env
    }
}
sails_rs::io_struct_sol_impl!(CreatePrg, 0, {
    type Params = (bool,);
    type AbiParams = (bool,);
    into_abi_params = |value| {
        let abi_value: (bool,) = value.clone();
        abi_value
    };
    type Reply = [u8; 32];
    type AbiReply = [u8; 32];
    from_abi_reply = |value| value;
    call = selector("createPrg(bool)");
    reply = value;
});

impl<E: GearEnv> ITestContractClient<E> {
    pub const CREATE_PRG_SIGNATURE: &'static str = "createPrg(bool)";

    pub fn create_prg(&self, encode_reply: bool) -> PendingCall<CreatePrg, E> {
        PendingCall::<CreatePrg, E>::new(self.env.clone(), self.program_id, 0, (encode_reply,))
    }
}
sails_rs::io_struct_sol_impl!(Svc1DoThis, 1, {
    type Params = (bool, u32, sails_rs::prelude::String);
    type AbiParams = (bool, u32, sails_rs::prelude::String);
    into_abi_params = |value| {
        let abi_value: (bool, u32, sails_rs::prelude::String) = value.clone();
        abi_value
    };
    type Reply = [u8; 32];
    type AbiReply = [u8; 32];
    from_abi_reply = |value| value;
    call = selector("svc1DoThis(bool,uint32,string)");
    reply = value;
});

impl<E: GearEnv> ITestContractClient<E> {
    pub const SVC_1_DO_THIS_SIGNATURE: &'static str = "svc1DoThis(bool,uint32,string)";

    pub fn svc_1_do_this(
        &self,
        encode_reply: bool,
        p1: u32,
        p2: sails_rs::prelude::String,
    ) -> PendingCall<Svc1DoThis, E> {
        PendingCall::<Svc1DoThis, E>::new(
            self.env.clone(),
            self.program_id,
            0,
            (encode_reply, p1, p2),
        )
    }
}
